--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </head>
 <body>
     <header>
-        <h1>Sowmya P</h1>
+        <h1>Sowmya Prabhakar</h1>
         <div class="contact">
             <span>9886451282 |</span>
             <a href="mailto:sowmyap222000@gmail.com">sowmyap222000@gmail.com</a> |
