updated cryptobot logo

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 <!-- bolt icon for InstaOptions -->
                                 <picture>
                                     <source srcset="/instaoptions-icon-30X30.svg">
-                                    <img src="/instaoptions-icon-30X30.svg" alt="Quantman Logo" class="quantman-logo">
+                                    <img src="/instaoptions-icon-30X30.svg" alt="InstaOptions Logo" class="quantman-logo">
                                 </picture>
                                 <span>InstaOptions</span>
                             </a>
@@ -241,7 +241,7 @@
                                 <!-- digital block icon for Cryptobot -->
                                 <picture>
                                     <source srcset="/cryptobot-logo.svg">
-                                    <img src="/cryptobot-logo.svg" alt="Quantman Logo" >
+                                    <img src="/cryptobot-logo.svg" alt="Cryptobot Logo" class="quantman-logo">
                                 </picture>
                                 <span>Cryptobot</span>
                             </a>
