--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sowmya P - Resume</title>
+    <title>Sowmya - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/s-logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -156,7 +157,7 @@
     <header>
         <h1>Sowmya Prabhakar</h1>
         <div class="contact">
-            <span>9886451282 |</span>
+            <span> <a href="tel:9886451282">9886451282</a> |</span>
             <a href="mailto:sowmyap222000@gmail.com">sowmyap222000@gmail.com</a> |
             <a href="https://www.linkedin.com/in/sowmya--p" target="_blank">LinkedIn</a>
         </div>
